skeplib/tests/fixtures/resolver/invalid/duplicate_imported_operator_precedence/a.sk
opr xoxo(lhs: Int, rhs: Int) -> Int precedence 3 { return lhs + rhs; }
export { xoxo };
